--- a/BM23/AppShell.xaml
+++ b/BM23/AppShell.xaml
@@ -3,13 +3,23 @@
     x:Class="BM23.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:BM23"
-    Shell.FlyoutBehavior="Disabled">
+    xmlns:local="clr-namespace:BM23.Pages"
+    Shell.FlyoutBehavior="Flyout">
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
-
+        ContentTemplate="{DataTemplate local:Hub}"
+        Route="Hub" />
+    <ShellContent
+        Title="Team"
+        ContentTemplate="{DataTemplate local:Hub}"
+        Route="Hub" />
+    <ShellContent
+        Title="Settings"
+        ContentTemplate="{DataTemplate local:Hub}"
+        Route="Hub" />
+    <ShellContent
+        Title="Exit Game"
+        ContentTemplate="{DataTemplate local:Hub}"
+        Route="Hub" />
 </Shell>
-
