--- a/BM23/Pages/Hub.xaml
+++ b/BM23/Pages/Hub.xaml
@@ -1,12 +1,16 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="BM23.Pages.Hub"
-             >
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
-</ContentPage>
+﻿<TabbedPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+            xmlns:local="clr-namespace:BM23.Pages"
+            x:Class="BM23.Pages.Hub"
+            BarBackgroundColor="Green"
+            BarTextColor="White"
+            SelectedTabColor="Black"
+            UnselectedTabColor="Gray"
+
+            >
+
+    <local:Roster Title="Roster"/>
+    <local:Settings Title="Settings"/>
+    <local:ExitGame Title="Exit"/>
+    <local:Messages Title="Messages"/>
+</TabbedPage>
