--- a/BM23/Pages/Messages.xaml
+++ b/BM23/Pages/Messages.xaml
@@ -2,15 +2,40 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="BM23.Pages.Messages"
-             Title="Messages">
-    <VerticalStackLayout>
-        <ListView >
+             BackgroundColor = "Purple"
+             >
+    <AbsoluteLayout>
+        <ListView>
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <TextCell Text="Welcome to our team"
-                      Detail="Lorem ipsum dolar sit amet" />
+                    <ViewCell>
+                        <Grid Padding="10">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+                            <!--Label Grid.Column="1"
+                           Text="asdf"
+                           FontAttributes="Bold" /-->
+                            <Label Grid.Row="1"
+                           Grid.Column="1"
+                           Text="zxzcv"
+                           FontAttributes="Italic"
+                           VerticalOptions="End"
+                           FontSize="25"
+                           TextColor="Black"
+
+                                   />
+                        </Grid>
+                    </ViewCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-    </VerticalStackLayout>
+
+    </AbsoluteLayout>
+   
 </ContentPage>
