--- a/BM23/Pages/Messages.xaml
+++ b/BM23/Pages/Messages.xaml
@@ -2,40 +2,28 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="BM23.Pages.Messages"
-             BackgroundColor = "Purple"
              >
-    <AbsoluteLayout>
-        <ListView>
+    <ScrollView BackgroundColor="Yellow">
+        <Grid RowDefinitions="500" ColumnDefinitions="400, 1000" Padding="20" Grid.Column="1"
+          BackgroundColor="Red">
+        <ListView x:Name="listMessageTitles" BackgroundColor="Transparent"
+                  ItemSelected="listMessageTitles_SelectionChanged">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <ViewCell>
-                        <Grid Padding="10">
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="Auto" />
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto" />
-                                <ColumnDefinition Width="Auto" />
-                            </Grid.ColumnDefinitions>
-                            <!--Label Grid.Column="1"
-                           Text="asdf"
-                           FontAttributes="Bold" /-->
-                            <Label Grid.Row="1"
-                           Grid.Column="1"
-                           Text="zxzcv"
-                           FontAttributes="Italic"
-                           VerticalOptions="End"
-                           FontSize="25"
-                           TextColor="Black"
-
-                                   />
-                        </Grid>
-                    </ViewCell>
+                    <TextCell
+                    Text = "{Binding Title}"
+                    Detail = "{Binding Preview}">
+                    </TextCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-
-    </AbsoluteLayout>
-   
+            <Label
+                x:Name="EmailsLabel"
+                Grid.Column="2"
+                TextColor="White"
+                BackgroundColor="Purple"
+                >
+            </Label>
+    </Grid>
+    </ScrollView>
 </ContentPage>
