--- a/BM23/Pages/Search.xaml
+++ b/BM23/Pages/Search.xaml
@@ -2,6 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="BM23.Pages.Search"
+             Title="search"
+             BackgroundColor="Blue"
              >
     <AbsoluteLayout>
         <Entry
@@ -12,13 +14,5 @@
             FontSize = "20"
             TextColor="White"
          />
-
-        <ScrollView>
-            <StackLayout>
-                <Label
-                    Text="asd"
-                />
-            </StackLayout>
-        </ScrollView>
     </AbsoluteLayout>
 </ContentPage>
